# ch592-cmake-template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
cmake/: toolchain-ch59x.cmake
hal/: CMakeLists.txt
hal/StdPeriphDriver/: CH59x_i2c.c  CMakeLists.txt
hal/StdPeriphDriver/inc/: CH59x_common.h
hal/ble/: CMakeLists.txt
hal/flash/: CMakeLists.txt
hal/include/: CONFIG.h
printf/: CMakeLists.txt
wch/: CMakeLists.txt
